--- a/JS3.html
+++ b/JS3.html
@@ -11,11 +11,11 @@
   };
 }
 
-var add5 = makeAdder(5);
-var add10 = makeAdder(10);
+var add5 = makeAdder(5);// x 
+var add10 = makeAdder(10); // x
 
-console.log(add5(2));  // 7
-console.log(add10(2)); // 12
+console.log(add5(2));  // 7.  /// 2 = y
+console.log(add10(2)); // 12.  /// 2 = y
 			}
         </script>
     </head>
